--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <ul>
+    <li><a href="#">Probando rama navbar</a></li>
+  </ul>
   <main>
       <div class="perfil">
         <picture><img src="assets/images/avatar-jessica.jpeg" alt="" class="imagen"></picture>
@@ -26,5 +29,6 @@
       </div>
   </main>
   <footer>&copy; Copyright 2024 </footer>
+  
 </body>
 </html>
